--- a/themes/kurtpaullevy-understrap-child/src/sass/theme/_footer.scss
+++ b/themes/kurtpaullevy-understrap-child/src/sass/theme/_footer.scss
@@ -6,20 +6,40 @@
                 border-top: 4px solid;
                 color: child_theme_variables.$primary;
                 opacity: 1;
-                //margin: 3em 0;
                 margin: 0;
             }
     }
 }
 
+#wrapper-footer {
+    margin-top: 3rem;
+    padding: 0;
+}
+
+.site-footer {
+    padding: 3rem 0 1rem;
+}
+
 .site-footer {
     .site-info {
-        p {
+        small {
             font-family: child_theme_variables.$font-family-sans-serif;
-            font-size: 0.5rem;
+            font-size: 0.75rem;
             line-height: 1.2;
+            margin-bottom: 1.5rem;
         }
     }
+}
+
+.site-info {
+    margin-bottom: 1.438rem;
+}
+
+.footer__copyright-text {
+    font-size: 8px;
+    font-family: child_theme_variables.$font-family-sans-serif;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .form-control::placeholder {
@@ -38,13 +58,54 @@
     border: none;
     border-bottom: child_theme_variables.$input-border-width solid child_theme_variables.$input-border-color;
     border-radius: 0;
+    padding: 0 0 0.875rem;
+    margin-bottom: 0.688rem;
 }
 
 #email-help-block {
     color: child_theme_variables.$gray-400;
+    font-size: child_theme_variables.$font-size-xs;
+    margin-bottom: 0.688rem;
+}
+
+.site-footer button {
+    margin-bottom: 3.5rem;
 }
 
 #validation-container {
     max-width: max-content;
+}
+@media only screen and (min-width: 1440px) {
+    #wrapper-footer {
+        margin-top: 10.563rem;
+    }
+
+    .site-footer {
+        .site-info {
+            small {
+                font-family: child_theme_variables.$font-family-sans-serif;
+                font-size: child_theme_variables.$font-size-base;
+                line-height: 1.2;
+                margin: 0;
+            }
+        }
+    }
+
+    .site-footer {
+        padding: 1.375rem 0 1.5rem;
+    }
+
+    #contact-form {
+        margin-top: 3.125rem;
+        margin-bottom: 2.875rem;
+    }
+
+    .footer__copyright-text {
+        font-size: 10px;
+    }
+
+    .site-info {
+        margin-bottom: 0;
+    }
 }
 
